--- a/QL_ThietBi/QL_ThietBi/Web.config
+++ b/QL_ThietBi/QL_ThietBi/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="QL_THIETBIConnectionString" connectionString="Data Source=DESKTOP-FINT84M\SQLEXPRESS;Initial Catalog=QL_THIETBI;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="QL_THIETBIConnectionString" connectionString="Data Source=DESKTOP-JJQTUB9\SQLEXPRESS;Initial Catalog=QL_THIETBI;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
